# Formula1_020_Data_Processor

./: .gitignore  Dockerfile  Dockerfile.duckdb  README.md  README_instruction.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml  requirements.txt  server.py
.devcontainer/: Dockerfile  devcontainer.json
Docker/vscode/: Dockerfile  settings.json
airflow/: requirements.txt
data/: sample_data.json
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: json_extract.sql
dbt_project/models/01_bronze/: stg_sample.sql
dbt_project/models/03_gold/: final_metrics.sql
dbt_project/tests/: test_example.sql
macros/: custom_tests.sql  utils.sql
models/01_bronze/: drivers_bronze.sql  example.sql  positions_bronze.sql  schema.yml  sessions_bronze.sql
models/02_silver/: clean_drivers.sql  clean_laptimes.sql  clean_positions.sql  clean_sessions.sql  schema.yml  silver_drivers.sql  silver_meetings.sql  silver_race_control.sql  silver_sessions.sql
models/03_gold/: driver_avg_laptime_vs_position.sql  driver_position_counts.sql  gold_meetings.sql  schema.yml
models/gold/: example.sql
models/silver/: example.sql
seeds/: driver_lookup.csv  schema.yml
services/code-server/: Dockerfile  config.yaml
services/data-platform/: Dockerfile  requirements.txt
tests/: test_avg_lap_time_range.sql  test_driver_id_positive.sql
