[tool.poetry]
name = "dbt-duckdb-project"
version = "0.1.0"
description = "A dbt project using DuckDB"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.8.0"
dbt-duckdb = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"