[tool.poetry]
name = "data-engineering-project"
version = "0.1.0"
description = "Projekt inżynierii danych z DuckDB, DBT, Airflow i code-server"
authors = ["Twoje Imię <twoj.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.9.3"
dbt-duckdb = "^1.9.2"
pandas = "*"
apache-airflow = {version = "2.9.3", python = ">=3.10,<3.13"}
jupyter = "*"
faker = "*"
kagglehub = "*"
argcomplete = "*"
awscli = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
